@@ -1,3 +1,10 @@
+2008-10-20  Alp Toker  <alp@nuanti.com>
+
+        Fix autotools dist build target by listing recently added header
+        files only. Not reviewed.
+
+        * GNUmakefile.am:
+
 2008-10-20  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Anders Carlsson.
